--- a/style/style.css
+++ b/style/style.css
@@ -12,3 +12,15 @@ p
  font-size: 24px;
  
 }
+
+.c-item
+{
+    height: 480px;
+}
+.c-img
+{
+    height: 100%;
+    object-fit: cover;
+    filter:brightness(0.9)
+
+}
